unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/Staging_Oracle_Show_Booth__c.object-meta.xml
<CustomObject>
    <description>Staging Table for Show Occurrence Booths from Oracle</description>
    <label>CORE Booth</label>
    <nameField>
        <label>Record Name BOOTH_ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CORE Booths</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>