unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_CREATION_DATE__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.CREATION_DATE column. This column is derived from XGEC_SW_CUST_BTH.CREATION_DATE column.</description>
    <label>Booth Created</label>
    <type>DateTime</type>
</CustomField>