unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_ID__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_ID__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.CUST_BTH_ID column. This column is derived from XGEC_SW_CUST_BTH.CUST_BTH_ID column.</description>
    <label>Booth ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>