unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_LAST_UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_LAST_UPDATE_DATE__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.LAST_UPDATE_DATE column. This column is derived from XGEC_SW_CUST_BTH.LAST_UPDATE_DATE column.</description>
    <label>Booth Last Modified</label>
    <type>DateTime</type>
</CustomField>