unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_LENGTH__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_LENGTH__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.BOOTH_LENGTH column. This column is derived from XGEC_SW_CUST_BTH.LENGTH column.</description>
    <label>Length</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>