unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_NUMBER__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.BOOTH_NUMBER column. This column is derived from XGEC_SW_CUST_BTH.BOOTH_NUMBER column.</description>
    <label>Booth #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>