unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_SHARED_FLAG__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_SHARED_FLAG__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.BOOTH_SHARED_FLAG column. This column is derived from XGEC_SW_CUST_BTH.BOOTH_SHARED_FLAG column.</description>
    <label>Shared Booth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>