unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_SIZE__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_SIZE__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.BOOTH_SIZE column. This column is computed as XGEC_SW_CUST_BTH.LENGTH * XGEC_SW_CUST_BTH.WIDTH.</description>
    <label>Booth Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>