unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/BOOTH_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_TYPE__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.BOOTH_TYPE column. This column is derived from XGEC_SW_CUST_BTH.BOOTH_TYPE column.</description>
    <label>Booth Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>