unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/CUST_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_ACCOUNT_ID__c</fullName>
    <description>Stores values from Oracle Show Occurrence Customer XGEC_SW_OCCR_CUST.CUST_ACCOUNT_ID column.</description>
    <label>Customer Account ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>