unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/CUSTOMER_NAME__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NAME__c</fullName>
    <description>Stores values from Oracle Party HZ_PARTIES.PARTY_NAME column.</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>