unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/CUSTOMER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NUMBER__c</fullName>
    <description>GES Master Customer Number</description>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>