unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/ED_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ED_FLAG__c</fullName>
    <description>Stores values from Oracle Show Occurrence Customer XGEC_SW_OCCR_CUST.ED_FLAG column.</description>
    <label>E&amp;E</label>
    <length>1</length>
    <type>Text</type>
</CustomField>