unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/EVENT_CITY__c.field-meta.xml
<CustomField>
    <fullName>EVENT_CITY__c</fullName>
    <description>Stores values from Oracle Show Occurrence XGEC_SW_SHOW_OCCR.EVENT_CITY column.</description>
    <label>Event City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>