unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/EXHIBITOR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>EXHIBITOR_FLAG__c</fullName>
    <description>Stores values from Oracle Show Occurrence Customer XGEC_SW_OCCR_CUST.EXHIBITOR_FLAG column.</description>
    <label>Exhibitor</label>
    <length>1</length>
    <type>Text</type>
</CustomField>