unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/EXHIBITOR_STATUS2__c.field-meta.xml
<CustomField>
    <fullName>EXHIBITOR_STATUS2__c</fullName>
    <description>Stores values from Oracle Customer Booth Status XGEC_SW_CUST_BTH_STATUS_V.EXHIBITOR_STATUS2 column.</description>
    <label>Exhibitor Status 2</label>
    <length>240</length>
    <type>Text</type>
</CustomField>