unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/FACILITY_HEADER_ID__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_HEADER_ID__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.FCLT_HDR_ID column. This column is derived from XGEC_SW_FCLT_HDR_V.FCLT_HDR_ID column.</description>
    <label>Facility Header ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>