unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/FACILITY_ID__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_ID__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.FACILITY_ID column. This column is derived from XGEC_SW_FCLT_HDR_V.FACILITY_ID column.</description>
    <label>Facility ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>