unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/INACTIVE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INACTIVE_FLAG__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.INACTIVE_FLAG column. This column is derived from XGEC_SW_CUST_BTH.INACTIVE_FLAG column.</description>
    <label>Inactive</label>
    <length>1</length>
    <type>Text</type>
</CustomField>