unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/Interface_Process_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Interface_Process_Attempts__c</fullName>
    <label>Interface Process Attempts</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>