unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/INVOICE_HOLD_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_HOLD_FLAG__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BTH_STATUS_V.INVOICE_HOLD_FLAG column.</description>
    <label>Hold Invoice</label>
    <length>1</length>
    <type>Text</type>
</CustomField>