unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/MASTER_FACILITY_HEADER_ID__c.field-meta.xml
<CustomField>
    <fullName>MASTER_FACILITY_HEADER_ID__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.MAST_FCLT_HDR_ID column. This column is derived from XGEC_SW_FCLT_HDR_V.MAST_FCLT_HDR_ID column.</description>
    <label>Master Facility Header ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>