unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/PROJECT_NAME__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_NAME__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.PROJECT_NAME column. This column is derived from PA_PROJECTS_ALL.NAME column.</description>
    <label>Project Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>