unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/PROJECT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_NUMBER__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.PROJECT_NUMBER column. This column is derived from PA_PROJECTS_ALL.SEGMENT1 column.</description>
    <label>Project Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>