unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/SERVICE_ZONE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ZONE__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.SERVICE_ZONE column.</description>
    <label>Service Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>