unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/SHOW_ID__c.field-meta.xml
<CustomField>
    <fullName>SHOW_ID__c</fullName>
    <description>Stores values from Oracle Show Occurrence XGEC_SW_SHOW_OCCR.OCCR_ID column.</description>
    <label>Show ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>