unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/SHOW_OCCR_CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>SHOW_OCCR_CUST_ID__c</fullName>
    <description>Stores values from Oracle Show Occurrence Customer XGEC_SW_OCCR_CUST.SHOW_OCCR_CUST_ID column.</description>
    <label>Show Occurrence Customer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>