unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/SHOW_OCCR_ID__c.field-meta.xml
<CustomField>
    <fullName>SHOW_OCCR_ID__c</fullName>
    <description>Stores values from Oracle Show Occurrence XGEC_SW_SHOW_OCCR.SHOW_OCCR_ID column.</description>
    <label>Show Occurrence ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>