unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/SHOW_ORG_FLAG__c.field-meta.xml
<CustomField>
    <fullName>SHOW_ORG_FLAG__c</fullName>
    <description>Stores values from Oracle Show Occurrence Customer XGEC_SW_OCCR_CUST.SHOW_ORG_FLAG column.</description>
    <label>Show Org</label>
    <length>1</length>
    <type>Text</type>
</CustomField>