unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/Show_Package__c.field-meta.xml
<CustomField>
    <fullName>Show_Package__c</fullName>
    <label>Show Package</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>