unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/THIRD_PARTY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>THIRD_PARTY_FLAG__c</fullName>
    <description>Stores values from Oracle Show Occurrence Customer XGEC_SW_OCCR_CUST.THIRD_PARTY_FLAG column.</description>
    <label>Third Party</label>
    <length>1</length>
    <type>Text</type>
</CustomField>