unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/fields/ZONE__c.field-meta.xml
<CustomField>
    <fullName>ZONE__c</fullName>
    <description>Stores values from Oracle Customer Booth XGEC_SW_CUST_BOOTH_V.ZONE column.</description>
    <label>Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>