unpackaged/main/default/objects/Staging_Oracle_Show_Booth__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interface_Batch_Number__c</columns>
    <columns>PROJECT_NUMBER__c</columns>
    <columns>PROJECT_NAME__c</columns>
    <columns>CUSTOMER_NAME__c</columns>
    <columns>BOOTH_NUMBER__c</columns>
    <columns>BOOTH_SIZE__c</columns>
    <columns>BOOTH_LENGTH__c</columns>
    <columns>BOOTH_WIDTH__c</columns>
    <columns>INACTIVE_FLAG__c</columns>
    <columns>EXHIBITOR_FLAG__c</columns>
    <columns>ED_FLAG__c</columns>
    <columns>ZONE__c</columns>
    <columns>SERVICE_ZONE__c</columns>
    <columns>Interface_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>